fixed text alignment for tab content

--- a/djangocon/static/css/main.css
+++ b/djangocon/static/css/main.css
@@ -177,7 +177,7 @@ input[type="text"], textarea  {
   border: none;
 }
 
-.blog-content p, .page-content p {
+.blog-content p, .page-content p, .tab-content {
   font-family: 'BrandonText-Medium';
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
